--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+  @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@
     --errorColor: red;
     --stepNumber: 6;
     --containerWidth: 600px;
-    --bgColor: #333;
+    --bgColor: black;
     --inputBorderColor: lightgray;
 }
 
@@ -29,7 +29,7 @@ body {
 }
 .container {
     width: 300px;
-    height: 500px;
+    height: 600px;
     background:#fff ;
     text-align: center;
     border-radius: 10px;
